added simple initial shopping list

--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -23,7 +23,6 @@ under the title of recipeApp -->
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    s
     <!-- Custom Fonts -->
     <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
@@ -59,8 +58,8 @@ under the title of recipeApp -->
                 <div class="header-content-inner text-primary">
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
                     <hr>
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
-                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Build a Shopping List!</a>
+                    <a href="/index" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
+                    <a href="/index/list" class="btn btn-primary btn-xl page-scroll">Build a Shopping List!</a>
                 </div>
             </div>
         </div>
