--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -37,6 +37,8 @@ under the title of recipeApp -->
 
 
     <script src="js/services/recipeService.js"></script>
+    <script src="js/services/listService.js"></script>
+
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
