--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -60,7 +60,7 @@ under the title of recipeApp -->
                 <div class="header-content-inner text-primary">
                     <h1 id="homeHeading">Recipe Recommending Application</h1>
                     <hr>
-                    <a href="/index" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
+                    <a href="#about" class="btn btn-primary btn-xl page-scroll">Start you recipe search!</a>
                     <a href="/index/list" class="btn btn-primary btn-xl page-scroll">Build a Shopping List!</a>
                 </div>
             </div>
