added html for specific recipe chosen

--- a/public/partial/home.html
+++ b/public/partial/home.html
@@ -160,7 +160,7 @@
             It is getting the titles and the images.
             ng-src is used to reference the images-->
                 <div class="col-lg-4 col-sm-6 center-block" ng-repeat="recipe in recipes">
-                    <a href="/italian" class="portfolio-box">
+                    <a href="/index/recipe" class="portfolio-box">
                         <img ng-src="{{recipe.image}}" class="img-fluid" alt="Responsive image" height="228.03">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
