--- a/views/pages/index.html
+++ b/views/pages/index.html
@@ -18,6 +18,7 @@ under the title of recipeApp -->
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
     <script src="js/angular-animate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.8/angular-filter.min.js"></script>
     <script src="js/recipe-app.js"></script>
     <script src="js/controllers.js"></script>
 
